<resources>
    <string name="app_name">MyQuotes</string>
    <string name="title_activity_login">Sign in</string>
    <string name="banner_ad_unit_id">ca-app-pub-1339003443292468/6510958563</string>
    <string name="app_id">ca-app-pub-1339003443292468~7450250112</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="no_network">Not connected to the internet. Please check your connection</string>
    <string name="author">Author</string>
    <string name="hint_add_book_author">Add the book author</string>
    <string name="save">Save</string>
    <string name="error_fetch_data">Unknown error when fetching the data. Please check your connection</string>
    <string name="hint_add_book_title">Add the book title</string>
    <string name="error_no_user">No User Found. Try again.</string>
    <string name="delete_book">Delete the Book</string>
    <string name="book_saved">Saved Successfully</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="quote_text">Quote</string>
    <string name="page_number">Page</string>
    <string name="quote_remark">Remarks</string>
    <string name="error_wrong_number_format">Insert a number</string>
    <string name="hint_your_favorite_quote">Your favorite quote from the book</string>
    <string name="hint_your_remark">What are your thoughts?</string>
    <string name="hint_page_number">Page</string>
    <string name="title_activity_show_quote">ShowQuoteActivity</string>
    <string name="quote">Quote</string>
    <string name="remark">Remark</string>
    <string name="action_settings">Settings</string>
    <string name="quote_from_page">from page</string>
    <string name="edit">Edit</string>
    <string name="data_add_successfully">Added Successfully</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_to_widget">Add to widget</string>
    <string name="widget_unknown_book">Unknown Book</string>
    <string name="signout">Sign out</string>
    <string name="error_no_internet">No Internet connection!</string>
    <string name="error_unknown">Unkown error</string>
    <string name="dialog_confirm_delete_book">Are you sure you want to delete this book?</string>
    <string name="dialog_confirm_delete_quote">Are you sure you want to delete this quote?</string>
    <string name="edit_book">Edit the book</string>
    <string name="edit_quote">Edit the quote</string>
    <string name="delete_quote">Delete the quote</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="email">Email</string>
    <string name="pref_header_account">Account</string>
    <string name="share">Share</string>
    <string name="share_quote">Share quote</string>
    <string name="share_remark">Share remark</string>
    <string name="share_all">Share all</string>
    <string name="page">page</string>
    <string name="my_remark_on_this">My remark on this quote:</string>
    <string name="empty">EMPTY</string>

    <string-array name="colors">
        <item name="white">White</item>
        <item name="red">Red</item>
        <item name="blue">Blue</item>
        <item name="green">Green</item>
    </string-array>
</resources>
