<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
    android:layout_width="match_parent">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".ui.AddQuoteActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/et_quote_text"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_border"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/et_quote_page"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_quote_page"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            style="@style/MultilineEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/hint_your_favorite_quote"
            android:textSize="18sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/et_quote_page"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/edit_text_border"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/et_quote_remark"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/et_quote_remark"
        app:layout_constraintTop_toBottomOf="@+id/et_quote_text">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="14dp"
            android:background="@null"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/hint_page_number"
            android:inputType="number"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/et_quote_remark"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_border"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/button_save_quote"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_save_quote"
        app:layout_constraintTop_toBottomOf="@+id/et_quote_page">

        <android.support.design.widget.TextInputEditText
            style="@style/MultilineEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/hint_your_remark" />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/spinner_quote_color"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:entries="@array/colors"
        app:layout_constraintBottom_toTopOf="@+id/button_save_quote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_quote_remark" />

    <Button
        android:id="@+id/button_save_quote"
        style="@style/SaveButton"
        android:layout_marginStart="8dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="37dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_quote_color" />

</android.support.constraint.ConstraintLayout>

</ScrollView>